--- a/spacebrew_button/index.html
+++ b/spacebrew_button/index.html
@@ -6,157 +6,79 @@
 		<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- basic libraries -->
-        <script type="text/javascript" src="js/jquery/jq.js"></script>
-<script type="text/javascript">
-$(document).ready( function() {
-	setup();
-});
+    <script type="text/javascript" src="js/jquery/jq.js"></script>
+    <!-- Spacebrew libraries -->
+    <script type="text/javascript" src="js/jquery/jq.js"></script>
+    <script type="text/javascript">
 
-function gup( name ) {
-  name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
-  var regexS = "[\\?&]"+name+"=([^&#]*)";
-  var regex = new RegExp( regexS );
-  var results = regex.exec( window.location.href );
-  if( results == null )
-    return "";
-  else
-    return results[1];
-}
+    /**
+     * [sb description]
+     * @type {Spacebrew.Client}
+     */
+      var sb;
 
-var index = 0;
+      var index = 0;
+      var buttonPress = false;
+      var buttonText = "";
 
-var name = gup('name') || window.location.href; 
-var server = gup('server') || 'localhost';
-
-
-var buttonPress = false;
-var buttonText = "";
-
-var myConfig = {
-"config": {
- "name": name,
- "description": "This is an example client which has a big red button you can push to send a message. It also listens for color events and will change it's color based on those messages.",
- "publish": {
-   "messages": [
-     {
-       "name": "buttonPress",
-       "type": "boolean",
-       "default": "false"
-     }
-   ]
- },
- "subscribe": {
-   "messages": [
-     {
-       "name": "color",
-       "type": "range"
-     },
-     {
-       "name": "text",
-       "type": "string"
-     }
-   ]
- }
-}
-};
-
-var ws = new WebSocket("ws://"+server+":9000");
-    ws.onopen = function() {
-        console.log("WebSockets connection opened");
-        console.log("my name is: "+name);
-        var nameMsg = { "name": [
-        	{"name": name}
-       	]};
-   		ws.send(JSON.stringify(nameMsg));
-
-      // send my config
-      ws.send(JSON.stringify(myConfig));
-    }
-    ws.onmessage = function(e) {
-        console.log("Got WebSockets message: " + e.data);
-        
-
-        var currName = JSON.parse(e.data).message.name;
-        var currType = JSON.parse(e.data).message.type;
-        //currName = "partyMode";
-        var currValue = JSON.parse(e.data).message.value;
-        
-        if (currType == "boolean") {
-          currValue = Boolean(currValue);
-          console.log("Cast to boolean");
-        }
-        //currValue = "BIG RED BUTTON";
-        console.log(currName+" : "+currValue);
-
-
-        // if it's a partyMode
-        if (currName == "partyMode") {
-          console.log("received partymode message");
-          if (currValue == true) {
-             partyModeOn = true;
-             console.log(partyModeOn);
-          } else {
-            partyModeOn = false;
-          }
-        }
-
-        // if it's a color
-        if (currName == "color") {
+      function onRangeMessage( name, value ){
+        if (name == "color") {
           console.log("received color message");
-          changeBGC(currValue);
+          changeBGC(value);
         }
-
-        // if it’s a text
-        if (currName == "text") {
-          console.log("received text message"); 
-          buttonText = currValue; 
-          document.getElementById("buttonMsg").innerHTML = currValue;        
-        } 
-
         incrementIndex();
-        // document.getElementById("numclicks").innerHTML=buttonText+" has been virtually clicked "+index+" times and PARTY MODE IS: "+partyModeOn;
+      }
 
-    }
-    ws.onclose = function() {
-        console.log("WebSockets connection closed");
-    }
+      function onStringMessage( name, value ){
+        // if it’s a text
+        if (name == "text") {
+          console.log("received text message"); 
+          buttonText = value; 
+          document.getElementById("buttonMsg").innerHTML = value;        
+        } 
+        incrementIndex();
+      }
 
+      $(document).ready( function() {
+        sb = new Spacebrew.Client();
+        sb.description = "This is an example client which has a big red button you can push to send a message. It also listens for color events and will change it's color based on those messages.";
 
-//-------------------------------------------------------
-function setup (){
-// 	// listen to the mouse
-	window.addEventListener("mousedown", onMouseDown);
-}
+        sb.addPublish( "buttonPress", "boolean", "false" );
+        sb.addSubscribe( "color", "range" );
+        sb.addSubscribe( "text", "string" );
 
-function incrementIndex() {
-    index += 1;
-    //console.log(index);
-}
+        sb.onRangeMessage = onRangeMessage;
+        sb.onStringMessage = onStringMessage;
 
-function changeBGC(pColor){
-  var tColor = "rgb("+Math.floor(pColor/4)+","+Math.floor(pColor/4)+","+Math.floor(pColor/4)+")";
-  document.body.style.background = tColor; //color;
-  console.log(tColor);
-  console.log("Changed color");
-}
+        sb.connect();
+      	setup();
+      });
 
-//-------------------------------------------------------
-function onMouseDown (evt){
-	//ecs.sendMessage("packet", 255);
-	console.log("Sending message");
+      //-------------------------------------------------------
+      function setup (){
+      // 	// listen to the mouse
+      	window.addEventListener("mousedown", onMouseDown);
+      }
 
-	var message = {message:
-       {
-           clientName:name,
-           name:"buttonPress",
-           type:"boolean",
-           value:"true"
-       }
-   	};
+      function incrementIndex() {
+          index += 1;
+          //console.log(index);
+      }
 
-   	//console.log(message);
-   	ws.send(JSON.stringify(message));
-}
+      function changeBGC(pColor){
+        var tColor = "rgb("+Math.floor(pColor/4)+","+Math.floor(pColor/4)+","+Math.floor(pColor/4)+")";
+        document.body.style.background = tColor; //color;
+        console.log(tColor);
+        console.log("Changed color");
+      }
+
+      //-------------------------------------------------------
+      function onMouseDown (evt){
+      	//ecs.sendMessage("packet", 255);
+      	console.log("Sending message"); 
+         	//console.log(message);
+         	sb.send("buttonPress", "boolean", "true");
+      }
 
 </script>
 		<!-- MAIN -->
