--- a/spacebrew_button/index.html
+++ b/spacebrew_button/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Spacebrew button</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
-		<!-- basic libraries -->
+    <title>Spacebrew button</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
+    <!-- basic libraries -->
     <script type="text/javascript" src="js/jquery/jq.js"></script>
     <!-- Spacebrew libraries -->
-    <script type="text/javascript" src="js/jquery/jq.js"></script>
+    <script type="text/javascript" src="js/sb.js"></script>
     <script type="text/javascript">
 
-    /**
-     * [sb description]
-     * @type {Spacebrew.Client}
-     */
+      
+      // Spacebrew Object
       var sb;
 
+      // Vars for example
       var index = 0;
       var buttonPress = false;
       var buttonText = "";
+
+      $(document).ready( function() {
+        setup();
+      });
 
       function onRangeMessage( name, value ){
         if (name == "color") {
@@ -30,7 +33,7 @@
       }
 
       function onStringMessage( name, value ){
-        // if it’s a text
+        // if it’s text
         if (name == "text") {
           console.log("received text message"); 
           buttonText = value; 
@@ -39,32 +42,34 @@
         incrementIndex();
       }
 
-      $(document).ready( function() {
+      //-------------------------------------------------------
+      function setup (){
+        // setup spacebrew
         sb = new Spacebrew.Client();
         sb.description = "This is an example client which has a big red button you can push to send a message. It also listens for color events and will change it's color based on those messages.";
 
         sb.addPublish( "buttonPress", "boolean", "false" );
+        sb.addPublish( "randomRange", "range", "0" );
         sb.addSubscribe( "color", "range" );
         sb.addSubscribe( "text", "string" );
 
+        // Override Spacebrew events
+        // - this is how you catch events coming from Spacebrew
         sb.onRangeMessage = onRangeMessage;
         sb.onStringMessage = onStringMessage;
 
         sb.connect();
-      	setup();
-      });
 
-      //-------------------------------------------------------
-      function setup (){
-      // 	// listen to the mouse
+        // listen to the mouse
       	window.addEventListener("mousedown", onMouseDown);
       }
 
+      //-------------------------------------------------------
       function incrementIndex() {
           index += 1;
-          //console.log(index);
       }
 
+      //-------------------------------------------------------
       function changeBGC(pColor){
         var tColor = "rgb("+Math.floor(pColor/4)+","+Math.floor(pColor/4)+","+Math.floor(pColor/4)+")";
         document.body.style.background = tColor; //color;
@@ -74,10 +79,9 @@
 
       //-------------------------------------------------------
       function onMouseDown (evt){
-      	//ecs.sendMessage("packet", 255);
       	console.log("Sending message"); 
-         	//console.log(message);
-         	sb.send("buttonPress", "boolean", "true");
+        sb.send("buttonPress", "boolean", "true");
+        sb.send("randomRange", "range", Math.floor(Math.random()*1024) );
       }
 
 </script>
