removed name message from sb library. using sb library in gui example.

--- a/spacebrew_gui/index.html
+++ b/spacebrew_gui/index.html
@@ -8,6 +8,8 @@
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 	<script src="js/connection.js"></script>
 	<script src="js/ui.js"></script>
+    <!-- Spacebrew libraries -->
+    <script type="text/javascript" src="js/sb.js"></script>
 </head> 
 <body> 
 
@@ -20,10 +22,10 @@
 
 		<form id="defaults">
 			<label for="slider1">Input Slider 1:</label>
-			<input type="range" class="slider" name="slider" id="slider1" value="500" min="0" max="1000"  />
+			<input type="range" class="slider" name="slider" id="slider1" value="500" min="0" max="1023"  />
 
 			<label for="slider2">Input Slider 2:</label>
-			<input type="range" class="slider" name="slider" id="slider2" value="500" min="0" max="1000"  />
+			<input type="range" class="slider" name="slider" id="slider2" value="500" min="0" max="1023"  />
 		</form>
 
 
