fixed link to graph

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Button:
 <a href='spacebrew_button/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
 <br />
 Graph:
-<a href='spacebrew-graph/index.html?name='>local</a>
-<a href='spacebrew-graph/index.html?server=lab-server&name='>lab</a>
-<a href='spacebrew-graph/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+<a href='spacebrew_graph/index.html?name='>local</a>
+<a href='spacebrew_graph/index.html?server=lab-server&name='>lab</a>
+<a href='spacebrew_graph/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
 <br />
 GUI:
 <a href='spacebrew_gui/index.html?name='>local</a>
