--- a/spacebrew_graph/index.html
+++ b/spacebrew_graph/index.html
@@ -94,7 +94,7 @@
       function setup (){
         // setup spacebrew!
         sb = new Spacebrew.Client();
-        sb.description = "This is an example client which has a big red button you can push to send a message. It also listens for color events and will change it's color based on those messages.";
+        sb.description = "This is a client which can be used to visualize various outputs from any other publishers.";
 
         // Override Spacebrew events
         // - this is how you catch events coming from Spacebrew
