added instructions on setting unique name

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <html>
-<head>
-</head>
-<body>
-Button:
-<a href='spacebrew_button/index.html?name='>local</a>
-<a href='spacebrew_button/index.html?server=lab-server&name='>lab</a>
-<a href='spacebrew_button/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
-<br />
-Graph:
-<a href='spacebrew_graph/index.html?name='>local</a>
-<a href='spacebrew_graph/index.html?server=lab-server&name='>lab</a>
-<a href='spacebrew_graph/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
-<br />
-GUI:
-<a href='spacebrew_gui/index.html?name='>local</a>
-<a href='spacebrew_gui/index.html?server=lab-server&name='>lab</a>
-<a href='spacebrew_gui/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
-<br />
-</body>
+	<head>
+	</head>
+	<body>
+		<div>
+			Please remember to give your client a unique name. You can click one of the following links and add your unique name after the "name=" in the query string and press enter to re-load the page with your unique name.
+		</div>
+		Button:
+		<a href='spacebrew_button/index.html?name='>local</a>
+		<a href='spacebrew_button/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_button/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<br />
+		Graph:
+		<a href='spacebrew_graph/index.html?name='>local</a>
+		<a href='spacebrew_graph/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_graph/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<br />
+		GUI:
+		<a href='spacebrew_gui/index.html?name='>local</a>
+		<a href='spacebrew_gui/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_gui/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<br />
+	</body>
 </html>
