updates to graph and color screen.

--- a/spacebrew_graph/index.html
+++ b/spacebrew_graph/index.html
@@ -64,6 +64,7 @@
 
     //-------------------------------------------------------
       function onBooleanMessage( name, value ){
+          console.log("name: " + name + " value " + value);
           // if it's for a boolean
            if (name == "bool1") {
               console.log("received bool1 message");
