--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
 		Button:
 		<a href='spacebrew_button/index.html?name='>local</a>
 		<a href='spacebrew_button/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_button/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_button/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		Graph:
 		<a href='spacebrew_graph/index.html?name='>local</a>
 		<a href='spacebrew_graph/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_graph/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_graph/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		GUI:
-		<a href='spacebrew_gui/index.html?name='>local</a>
-		<a href='spacebrew_gui/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_gui/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_gui/admin.html?name='>local</a>
+		<a href='spacebrew_gui/admin.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_gui/admin.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		Colored Screen:
 		<a href='spacebrew_colored_screen/index.html?name='>local</a>
 		<a href='spacebrew_colored_screen/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_colored_screen/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_colored_screen/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		iPhone Events:
 		<a href='spacebrew_iphone_events/index.html?name='>local</a>
 		<a href='spacebrew_iphone_events/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_iphone_events/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_iphone_events/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		Slideshow:
 		<a href='spacebrew_slideshow/index.html?name='>local</a>
 		<a href='spacebrew_slideshow/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_slideshow/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_slideshow/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		Speech:
 		<a href='spacebrew_speech/index.html?name='>local</a>
 		<a href='spacebrew_speech/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_speech/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_speech/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		String:
 		<a href='spacebrew_string/index.html?name='>local</a>
 		<a href='spacebrew_string/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_string/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_string/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 		Text Transform:
 		<a href='spacebrew_text_transform/index.html?name='>local</a>
 		<a href='spacebrew_text_transform/index.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_text_transform/index.html?server=ec2-184-72-140-184.compute-1.amazonaws.com&name='>cloud</a>
+		<a href='spacebrew_text_transform/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 	</body>
 </html>
