--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
 		<a href='spacebrew_graph/index.html?server=lab-server&name='>lab</a>
 		<a href='spacebrew_graph/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
-		GUI:
-		<a href='spacebrew_gui/admin.html?name='>local</a>
-		<a href='spacebrew_gui/admin.html?server=lab-server&name='>lab</a>
-		<a href='spacebrew_gui/admin.html?server=sandbox.spacebrew.cc&name='>cloud</a>
-		<br />
 		Slider:
 		<a href='spacebrew_slider/index.html?name='>local</a>
 		<a href='spacebrew_slider/index.html?server=lab-server&name='>lab</a>
@@ -29,6 +24,11 @@
 		<a href='spacebrew_string/index.html?name='>local</a>
 		<a href='spacebrew_string/index.html?server=lab-server&name='>lab</a>
 		<a href='spacebrew_string/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+		Custom:
+		<a href='spacebrew_custom/index.html?name='>local</a>
+		<a href='spacebrew_custom/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_custom/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
 	</body>
 </html>
