Adding reconnect capability into javascript library, so that apps attempt to reconnect to server if they loose the connection.

--- a/spacebrew_button/index.html
+++ b/spacebrew_button/index.html
@@ -21,7 +21,7 @@
 	     */
 		function setup (){
 			// create spacebrew client object
-			sb = new Spacebrew.Client();
+			sb = new Spacebrew.Client({reconnect:true});
 
 			// set the base description
 			sb.name("button_example");
