--- a/spacebrew_button/index.html
+++ b/spacebrew_button/index.html
@@ -8,23 +8,30 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 
     <script type="text/javascript" src="js/jq.js"></script>
-	<script type="text/javascript" src="js/sb-1.1.0.js"></script>
+	<script type="text/javascript" src="js/sb-1.2.0.js"></script>
     <script type="text/javascript">
 
 		$(window).on("load", setup);
 	      
 		// Spacebrew Object
-		var sb;
+		var sb
+			, app_name = "button example"
+			;
 
 		/**
 	     * setup Configure spacebrew connection and adds the mousedown listener.
 	     */
 		function setup (){
+			var random_id = "0000" + Math.floor(Math.random() * 10000)
+				;
+
+			app_name = app_name + ' ' + random_id.substring(random_id.length-4);
+
 			// create spacebrew client object
 			sb = new Spacebrew.Client({reconnect:true});
 
 			// set the base description
-			sb.name("button_example");
+			sb.name(app_name);
 			sb.description("This spacebrew client sends and receives boolean messages.");
 
 			// configure the publication and subscription feeds
@@ -33,6 +40,7 @@
 
 			// override Spacebrew events - this is how you catch events coming from Spacebrew
 			sb.onBooleanMessage = onBooleanMessage;
+			sb.onOpen = onOpen;
 
 			// connect to spacbrew
 			sb.connect();
@@ -43,7 +51,14 @@
 		}	
 
 		/**
-	     * onButtonPress Function that is called whenever the button is pressed.  
+		 * Function that is called when Spacebrew connection is established
+		 */
+		function onOpen() {
+			$("#name").html("Connected as <strong>" + app_name + "</strong>");
+		}
+
+		/**
+	     * Function that is called whenever the button is pressed.  
 	     * @param  {Event object} evt Holds information about the button press event
 	     */
 		function onButtonPress (evt){
@@ -52,7 +67,7 @@
 		}
 
 		/**
-	     * onButtonRelease Function that is called whenever the button is released.  
+	     * Function that is called whenever the button is released.  
 	     * @param  {Event object} evt Holds information about the button press event
 	     */
 		function onButtonRelease (evt){
@@ -82,6 +97,9 @@
 		<h1>Click to send a message to spacebrew</h1>
 		<h3 id="numclicks"></h3>
 		<a class="button" id="buttonMsg">Click Me</a>
+
+		</br></br>
+		<div id="name">Trying to connect</div>
 	</body>
 
 </html>
