--- a/spacebrew_slider/index.html
+++ b/spacebrew_slider/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
-	<script type="text/javascript" src="js/sb-1.2.0.js"></script>
+	<script type="text/javascript" src="js/sb-1.3.0.js"></script>
 
     <script type="text/javascript">
 
@@ -20,6 +20,7 @@
 		// Spacebrew Object
 		var sb
 			, app_name = "slider example"
+			, values = {} 
 			;
 
 		/**
@@ -74,7 +75,10 @@
 			console.log("Setting up the UI listeners");
 			// when the slider state changes it sends a message to spacebrew
 			$(".slider").bind( "change", function(event, ui) {
-				sb.send(event.target.id, "range", event.target.valueAsNumber);
+				if (values[event.target.id] != event.target.value) {
+					sb.send(event.target.id, "range", event.target.value);
+					values[event.target.id] = event.target.value;
+				}
 			});
 		}
 
