--- a/spacebrew_xypad/index.html
+++ b/spacebrew_xypad/index.html
@@ -60,7 +60,7 @@
 				sb.connect();
 
 				// setup our trace div
-				debugDiv	= document.getElementById("name");
+				debugDiv = document.getElementById("name");
 				
 				canvas = document.getElementById("input");
 				ctx	= canvas.getContext('2d');
@@ -78,7 +78,7 @@
 				});
 				myShakeEvent.start();
 				window.addEventListener('shake', function(e){
-					sb.send("clear", "boolean", "true");
+					sb.send("shake", "boolean", "true");
 				}, false);
 			}
 
@@ -210,6 +210,7 @@
 	</head>
 
 	<body>
+		<div id=""></div>
 		<div id="name">Trying to connect</div>
 		<canvas id="input"></canvas>
 	</body>
